[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Paper_Pixels/Enemies_reduced.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/EnemyBee.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/pixel.ttf" type="DynamicFontData" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 56, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 88, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 2.46864, 2.20118 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 4.05912, 3.29774 )

[sub_resource type="CircleShape2D" id=8]
radius = 54.9397

[sub_resource type="DynamicFont" id=10]
size = 7
font_data = ExtResource( 3 )

[node name="Bee" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )
speed = Vector2( 30, 30 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.113127, -0.509054 )
shape = SubResource( 6 )

[node name="EnemyBody" type="Area2D" parent="."]
position = Vector2( 0.0611296, -0.122254 )
collision_layer = 2

[node name="HitColliderShape" type="CollisionShape2D" parent="EnemyBody"]
modulate = Color( 0.152941, 0.419608, 0.00392157, 1 )
position = Vector2( 0.0118825, -0.565974 )
shape = SubResource( 9 )

[node name="DiscoverArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiscoverArea"]
shape = SubResource( 8 )

[node name="DebugLabel" type="Label" parent="."]
visible = false
margin_left = -51.3228
margin_top = -23.2396
margin_right = 53.6772
margin_bottom = -9.2396
custom_fonts/font = SubResource( 10 )
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="EnemyBody" to="." method="_on_Enemy_body_entered"]
[connection signal="body_entered" from="DiscoverArea" to="." method="_on_DiscoverArea_body_entered"]
[connection signal="body_exited" from="DiscoverArea" to="." method="_on_DiscoverArea_body_exited"]
